--- a/app/Resources/views/default/statistic.html.twig
+++ b/app/Resources/views/default/statistic.html.twig
@@ -15,7 +15,7 @@
 
         <div class="row">
             <div class="col">
-                <table class="table table-striped">
+                <table class="table table-striped url-statistics">
                     <thead>
                     <tr>
                         <th scope="col">Ip</th>
